--- a/src/app/shared/components/base-modal/base-modal.component.html
+++ b/src/app/shared/components/base-modal/base-modal.component.html
@@ -1,20 +1,12 @@
-@if (visible) {
-  <div class="base-modal" [style.width]="width">
-    <div class="modal-header">
-      <h2 class="modal-title">{{ title }}</h2>
-      @if (closable) {
-        <button mat-icon-button (click)="handleClose()">
-          <mat-icon>close</mat-icon>
-        </button>
-      }
-    </div>
+<div class="modal-header">
+  <h2 class="modal-title">{{ data.title }}</h2>
+  <button mat-icon-button (click)="close()">
+    <mat-icon>close</mat-icon>
+  </button>
+</div>
 
-    <div class="modal-body">
-      <ng-content></ng-content>
-    </div>
-
-    <div class="modal-footer">
-      <ng-content select="[modal-footer]"></ng-content>
-    </div>
-  </div>
-}
+<div class="modal-content">
+  <ng-container
+    *ngComponentOutlet="data.contentComponent; injector: injectorInstance"
+  ></ng-container>
+</div>
