--- a/src/app/Restock/resource/supplier-catalog/pages/supplier-overview/supplier-overview.component.html
+++ b/src/app/Restock/resource/supplier-catalog/pages/supplier-overview/supplier-overview.component.html
@@ -67,24 +67,19 @@
   <div *ngIf="hasSuppliers" class="table-wrapper">
     <h5 class="table-title">Supplier list</h5>
 
-    <table mat-table [dataSource]="dataSource" class="supplier-table mat-elevation-z1">
-
-      <!-- Columnas -->
+    <table mat-table [dataSource]="dataSource" class="supplier-table mat-elevation-z1"> <!-- Columna Nombre -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name</th>
         <td mat-cell *matCellDef="let s"> {{ s.name }}</td>
-      </ng-container>
-
+      </ng-container> <!-- Columna Categorías (adaptado) -->
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Category</th>
-        <td mat-cell *matCellDef="let s"> {{ s.category }}</td>
-      </ng-container>
-
+        <th mat-header-cell *matHeaderCellDef> Categories</th>
+        <td mat-cell *matCellDef="let s"> {{ (s.categories || []).join(', ') || 'Uncategorized' }}</td>
+      </ng-container> <!-- Columna Email -->
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email</th>
         <td mat-cell *matCellDef="let s"> {{ s.email }}</td>
-      </ng-container>
-
+      </ng-container> <!-- Columna Acciones -->
       <ng-container matColumnDef="catalog">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let s">
@@ -92,12 +87,9 @@
             <mat-icon>menu_book</mat-icon>
           </button>
         </td>
-      </ng-container>
-
-      <!-- Filas -->
+      </ng-container> <!-- Filas -->
       <tr mat-header-row *matHeaderRowDef="getColumns()"></tr>
       <tr mat-row *matRowDef="let row; columns: getColumns();"></tr>
-
     </table>
 
     <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
