--- a/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
@@ -1,1 +1,80 @@
-<p>approved-orders works!</p>
+<div class="table-container">
+  <app-filter-section></app-filter-section>
+
+  <table mat-table [dataSource]="orders" class="mat-elevation-z1">
+
+    <!-- Order Date -->
+    <ng-container matColumnDef="orderDate">
+      <th mat-header-cell *matHeaderCellDef> Order Date </th>
+      <td mat-cell *matCellDef="let order"> {{ order.orderDate }} </td>
+    </ng-container>
+
+    <!-- State -->
+    <ng-container matColumnDef="state">
+      <th mat-header-cell *matHeaderCellDef> State </th>
+      <td mat-cell *matCellDef="let order"> {{ order.state }} </td>
+    </ng-container>
+
+    <!-- Ship Date -->
+    <ng-container matColumnDef="shipDate">
+      <th mat-header-cell *matHeaderCellDef> Ship Date </th>
+      <td mat-cell *matCellDef="let order"> {{ order.shipDate }} </td>
+    </ng-container>
+
+    <!-- Restaurant Name -->
+    <ng-container matColumnDef="restaurantName">
+      <th mat-header-cell *matHeaderCellDef> Restaurant Name </th>
+      <td mat-cell *matCellDef="let order">
+        {{ order.restaurantName }}
+      </td>
+    </ng-container>
+
+    <!-- Requested Products -->
+    <ng-container matColumnDef="requestedProducts">
+      <th mat-header-cell *matHeaderCellDef> N° Requested Products </th>
+      <td mat-cell *matCellDef="let order">
+        {{ order.requestedProducts }}
+      </td>
+    </ng-container>
+
+    <!-- Final Price -->
+    <ng-container matColumnDef="finalPrice">
+      <th mat-header-cell *matHeaderCellDef> Final Price </th>
+      <td mat-cell *matCellDef="let order"> {{ order.finalPrice | currency:'S/':'symbol':'1.2-2' }} </td>
+    </ng-container>
+
+    <!-- Actions -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let order">
+        <button mat-icon-button  (click)="openOrderDetails()" class="open-modal-btn" >
+          <mat-icon>menu_book</mat-icon>
+        </button>
+        <button mat-icon-button  (click)="openEditOrderDetails()" class="open-modal-btn"> <mat-icon>edit</mat-icon></button>
+
+        <mat-icon>delete</mat-icon>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+
+  <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 6, 10]" showFirstLastButtons></mat-paginator>
+
+  <app-order-details
+    [modelValue]="showModal"
+    [hideState]="false"
+    (modelValueChange)="onModalChange($event)"
+    (close)="onModalClose($event)">
+  </app-order-details>
+
+  <app-edit-order
+    [modelValue]="showEditModal"
+    [hideState]="false"
+    (modelValueChange)="onEditModalChange($event)"
+    (close)="onEditModalClose($event)">
+    </app-edit-order>
+
+</div>
