--- a/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.html
@@ -1,41 +1,22 @@
 <h3 class="widget-title">Pending Orders</h3>
 
 <div class="widget-container">
-  <div class="scroll-wrapper">
-    <mat-table [dataSource]="orders">
+  <div class="widget-orders-wrapper">
+    <div class="scroll-wrapper">
+      <div class="custom-orders-table">
+        <orders-table
+          class="widget-context"
+          [orders]="pendingOrders"
+          [suppliers]="suppliers">
+        </orders-table>
 
-      <ng-container matColumnDef="supplier">
-        <mat-header-cell *matHeaderCellDef> Supplier</mat-header-cell>
-        <mat-cell *matCellDef="let o"> {{ o.supplier }}</mat-cell>
-      </ng-container>
+      </div>
+    </div>
 
-      <ng-container matColumnDef="supply">
-        <mat-header-cell *matHeaderCellDef> Supply</mat-header-cell>
-        <mat-cell *matCellDef="let o"> {{ o.supply }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="quantity">
-        <mat-header-cell *matHeaderCellDef> Quantity</mat-header-cell>
-        <mat-cell *matCellDef="let o"> {{ o.quantity }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="unit">
-        <mat-header-cell *matHeaderCellDef> Unit</mat-header-cell>
-        <mat-cell *matCellDef="let o"> {{ o.unit }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="finalPrice">
-        <mat-header-cell *matHeaderCellDef> Final price</mat-header-cell>
-        <mat-cell *matCellDef="let o"> S/ {{ o.finalPrice }}</mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="state">
-        <mat-header-cell *matHeaderCellDef> Status</mat-header-cell>
-        <mat-cell *matCellDef="let o"> {{ o.state }}</mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="getColumns()"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: getColumns()"></mat-row>
-    </mat-table>
+    <div class="view-all-button-container">
+      <button mat-icon-button (click)="goToOrders()" matTooltip="Ver todas las órdenes">
+        <mat-icon>arrow_forward</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
