--- a/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
@@ -3,8 +3,8 @@
     <div class="widget-pending-orders">
       <app-restaurant-pending-orders-widget></app-restaurant-pending-orders-widget>
     </div>
-    <div class="widget-last-alerts">
-        <app-restaurant-alerts-widget></app-restaurant-alerts-widget>
+    <div class="widget-last-notifications">
+        <app-restaurant-notifications-widget></app-restaurant-notifications-widget>
     </div>
   </div> <!-- Row 2: Carrusel de Clientes Frecuentes -->
   <div class="row-2">
