--- a/src/app/Restock/planning/recipe/components/supply-selector/supply-selector.component.html
+++ b/src/app/Restock/planning/recipe/components/supply-selector/supply-selector.component.html
@@ -38,16 +38,16 @@
     <table mat-table [dataSource]="internalValue" class="mat-elevation-z1 full-width">
 
       <!-- ID Column -->
-      <ng-container matColumnDef="supply_id">
+      <ng-container matColumnDef="supplyId">
         <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let element"> {{ element.supply_id }} </td>
+        <td mat-cell *matCellDef="let element"> {{ element.supplyId }} </td>
       </ng-container>
 
       <!-- Description Column -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Supply </th>
         <td mat-cell *matCellDef="let element">
-          {{ getSupplyName(element.supply_id) }}
+          {{ getSupplyName(element.supplyId) }}
         </td>
       </ng-container>
 
